// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passwordEntry component matches the snapshot when keyboard is drawn 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
<<<<<<< HEAD
          "fontFamily": "TTCommons",
=======
>>>>>>> fix failing test in landing container
          "fontSize": 14,
          "fontWeight": "100",
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={false}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
<<<<<<< HEAD
            "borderRadius": 4,
=======
>>>>>>> fix failing test in landing container
            "height": 48,
            "width": 164,
          },
          "text": Object {
<<<<<<< HEAD
            "color": "white",
=======
            "backgroundColor": "#942f51",
>>>>>>> fix failing test in landing container
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when no input is present 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
<<<<<<< HEAD
=======
    <Header
      title="Step 2"
    />
>>>>>>> fix failing test in landing container
    <CenteredText
      msg="Set a password to encrypt your data on the device"
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
<<<<<<< HEAD
          "fontFamily": "TTCommons",
=======
>>>>>>> fix failing test in landing container
          "fontSize": 14,
          "fontWeight": "100",
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={false}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
<<<<<<< HEAD
            "borderRadius": 4,
=======
>>>>>>> fix failing test in landing container
            "height": 48,
            "width": 164,
          },
          "text": Object {
<<<<<<< HEAD
            "color": "white",
=======
            "backgroundColor": "#942f51",
>>>>>>> fix failing test in landing container
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are not valid 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg="At least one uppercase letter needed"
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
<<<<<<< HEAD
          "fontFamily": "TTCommons",
=======
>>>>>>> fix failing test in landing container
          "fontSize": 14,
          "fontWeight": "100",
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={true}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={false}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
<<<<<<< HEAD
            "borderRadius": 4,
=======
>>>>>>> fix failing test in landing container
            "height": 48,
            "width": 164,
          },
          "text": Object {
<<<<<<< HEAD
            "color": "white",
=======
            "backgroundColor": "#942f51",
>>>>>>> fix failing test in landing container
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;

exports[`passwordEntry component matches the snapshot when passwords are valid 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "black",
      "justifyContent": "space-between",
    }
  }
>
  <Block
    flex={0.4}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <CenteredText
      msg=""
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 20,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "10%",
        }
      }
    />
    <CenteredText
      msg="This password will be stored in your keychain. After setting it, please make sure you have passcode enabled."
      style={
        Object {
          "color": "#ffefdf",
          "fontFamily": "TTCommons",
          "fontSize": 14,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "opacity": 0.6,
          "padding": "10%",
        }
      }
    />
  </Block>
  <Block
    flex={0.3}
    style={
      Object {
        "justifyContent": "space-around",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <TextInput
      allowFontScaling={true}
      editable={true}
      keyboardType="default"
      maxLength={40}
      onChangeText={[Function]}
      placeholder="Repeat password"
      placeholderTextColor="rgba(255, 239, 223, 0.38)"
      secureTextEntry={true}
      selectionColor="#942f51"
      style={
        Object {
          "color": "white",
          "fontFamily": "TTCommons",
          "fontSize": 22,
<<<<<<< HEAD
          "fontWeight": "100",
=======
>>>>>>> fix failing test in landing container
          "padding": "3%",
          "width": "80%",
        }
      }
    />
    <CenteredText
      msg=""
      style={
        Object {
          "color": "rgba(255, 239, 223, 0.38)",
<<<<<<< HEAD
          "fontFamily": "TTCommons",
=======
>>>>>>> fix failing test in landing container
          "fontSize": 14,
          "fontWeight": "100",
        }
      }
    />
  </Block>
  <Block
    flex={0.1}
  >
    <Button
      accent={false}
      disabled={false}
      icon={null}
      onLongPress={null}
      onPress={[Function]}
      primary={false}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "#942f51",
<<<<<<< HEAD
            "borderRadius": 4,
=======
>>>>>>> fix failing test in landing container
            "height": 48,
            "width": 164,
          },
          "text": Object {
<<<<<<< HEAD
            "color": "white",
=======
            "backgroundColor": "#942f51",
>>>>>>> fix failing test in landing container
            "fontFamily": "TTCommons",
            "fontSize": 22,
            "fontWeight": "100",
          },
        }
      }
      testID={null}
      text="Continue"
      upperCase={false}
    />
  </Block>
</Container>
`;
